--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,12 +40,7 @@
             android:value="@string/google_maps_key" />
 
         <activity android:name=".Activities.LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+          </activity>
         <activity android:name=".Activities.MobileContactsActivity" />
         <activity android:name=".Activities.ICEContactsActivity" />
         <activity android:name=".Activities.AddContact" />
@@ -60,7 +55,6 @@
             android:name=".Activities.MapsActivity"
             android:label="@string/title_activity_maps" />
         <activity android:name=".Activities.ImmediateAlert" />
-
         <activity android:name=".Activities.AddPhotoActivity" />
         <activity android:name=".Activities.SendICEContactAlert" />
 
@@ -75,7 +69,17 @@
         </provider>
 
         <activity android:name=".Activities.CameraActivity" />
-        <activity android:name=".Activities.imageSliderActivity"></activity>
+        <activity android:name=".Activities.imageSliderActivity" />
+        <activity android:name=".Activities.SplashScreen">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+
+        </activity>
     </application>
 
 </manifest>
